added rule file upload Api
