# routes/uploadRoutes.js
@@ -2,6 +2,7 @@
 const express = require('express');
 const router = express.Router();
 const fileTransform= require("../controllers/uploadController")
+const ruleData= require("../controllers/ruleDataController")
 const { uploadFile } = require("../controllers/fileController");
 const multer = require('multer');
 const path = require('path');
@@ -27,6 +28,8 @@ router.get('/get_criteria_fields', fileTransform.get_criteria_fields);
 router.get('/for_only_test', fileTransform.forOnlyTest);
 
 //for rule file upload
-router.post('/upload', upload.single("file"), uploadFile);
-
+router.post('/upload-rules', upload.single("file"), uploadFile);
+// new api for rule
+router.get('/get-rule-data', ruleData.getRuleData);
+//
 module.exports = router;
